--- a/Github.html
+++ b/Github.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
     <a href="About.html" class="w3-bar-item w3-button">Home</a>
     <a href="learned.html" class="w3-bar-item w3-button">What was learned</a>
-    <a href="Project.html" class="w3-bar-item w3-button">Projects</a>
+    <a href="Project.hmtl" class="w3-bar-item w3-button">Projects</a>
     <a href="Github.html" class="w3-bar-item w3-button">Github</a>
     <a href="Korean.html" class="w3-bar-item w3-button">K-Pop</a>
     <a href="Weblanguage.html" class="w3-bar-item w3-button">Web Language</a>
