--- a/About.html
+++ b/About.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 <html>
 <title>Home</title>
 <meta charset="UTF-8">
@@ -36,7 +35,7 @@ body {
     <a href="Project.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">My Projects</a>
     <a href="Github.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Why GitHub Is Important</a>
     <a href="Korean.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">K-Pop</a>
-    <a href="Website.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">My Next Web Language</a>
+    <a href="Weblanguage.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">My Next Web Language</a>
 
   </div>
 </nav>
