--- a/Korean.html
+++ b/Korean.html
@@ -47,14 +47,38 @@ p {line-height: 2}
   <div class="w3-content">
     <h1 class="w3-center w3-text-white"><b>What is K-pop About</b></h1>
 
-    <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.</i>
-    </p><br>
+    <p>K-Pop is a genre of music that has hit America by storm. If you can't tell with K-pop is by the "K", K-Pop is korean pop music. Now I know a lot of people are already turned off of the idea of korean music, but you have to give it a couple chances.
+    I first found K-pop in 2013 and at first I didn't like it, but then I kept on getting notifications for it, and one of them caught my attention, and I clicked on the video. That video was what made me start to like k-pop. After that I looked up some more groups and I listened to there music.
+  Just like any other artist in america, every person/group has diffrent sounding music. From there I have found two groups that I really like. The groups are EXO and BTS. Both are really good bands, but there songs are diffrent. Now what normally attracts someone to K-pop music is the beat of the music,
+most beats in kpop are very upbeat and lively. Another thing is the choreography in there music videos. Many people find the dances very powerful and energetic. Those are most of the reasons why I like Kpop. the Livley music, the energetic dancing, but I also like the poersonalities of the groups.Now for people that want to know more about the groups I like, just scroll down.</p>
 
-  </div>
-</div>
+<p>Like I said before the groups I listen to are EXO and BTS there are others but these two I listen to a lot more than others. EXO is a 9 member band, they used to have 12 but three left do to how the company treated them. EXO has made a lot of albums and the all have a lot of different sounding songs on each album. Some are sad, some are happy. some are quieter and others are really loud.That is one of the things I ike about EXO. Another thing is that, not only do they sing in korean they also sing in manderian. The reason is because half of the people in the groups where chinese, and it made them more at home to be able to sing these songs and make a chinese version, that they can understand.</P>
+  <img src="exo.jpg" alt="Kpop group, EXO" height="400" width="400">
+<p>BTS is a 7 member group, and their music is very energetic. You would thnk that some of their songs wouldn't have any meaning into it, but almost all of there songs have meanings, and even storys in them. That is what I love about BTS (They are my favorite band), They have very upbeat songs that have really good meaing to it. And yes I may not be able to understand their music all the way, but they put some english in ther songs so that we can get some type of idea of what is going on. </p>
+  <img src="bts.jpg" alt="Kpop group, BTS" height="400" width="400">
+<p>Now there is more that I can say about Kpop, but that would lead me to rumble on and on. So I'm not going to do that, what I will do is list some names from each band and link some information about each group, so that you can learn about them yourselves</p>
+<p style="color:red;"> BUUT before that here is a quick fact, on May 21st BTS won the Top Social Artist Award!! With over 300 Million votes!!!!!</p>
 
+<table align="center" BORDER=10 BORDERCOLOR=White>
+  <th>EXO SONGS</th>
+  <th>BTS SONGS</th>
+    <tr>
+      <td>Growl</td>
+      <td>Not Today</td>
+
+    </tr>
+    <tr>
+      <td>Monster</td>
+      <td>DOPE</td>
+
+    </tr>
+    <tr>
+      <td>Overdose</td>
+      <td>I need you</td>
+
+    </tr>
+</table>
+ <p style="color:red;">ENJOY!!!!!!!!!!</p>
 
 </body>
 </html>
