--- a/Learned.html
+++ b/Learned.html
@@ -40,7 +40,7 @@ body {
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>WHY GITHUB IS IMPORTANT</p>
   </a>
-  <a href="korean.hmtl" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="korean.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>K-Pop</p>
   </a>
