--- a/Korean.html
+++ b/Korean.html
@@ -26,8 +26,7 @@ p {line-height: 2}
 <header class="w3-display-container w3-wide bgimg w3-text-black" id="home">
   <div class="w3-display-middle w3-text-black w3-center">
     <h1 class="w3-jumbo"  >Korean Pop</h1>
-    <h2  style="color:red
-  ;">And why I like it</h2>
+    <h2  style="color:red;">And why I like it</h2>
     <h2><b>Mackeznie bauguess</b></h2>
   </div>
 </header>
